Change threadId to getId, so the code compiles on Java versions earlier than 19. This should be changed back to threadId in Java 19+, because getId was deprecated in Java 20.